--- a/CoffeeMaster/coffee.html
+++ b/CoffeeMaster/coffee.html
@@ -1,16 +1,10 @@
-<!--
-    
- وغيرها h1, h2 استخدم وسوم العناوين المختلفة
-
- وقم بكتابة الجمل التالية
-
- :الجملة الأولى 
- مرحباً، أنا محمد
- 
- 
- :الجملة الثانية
- Caribou قهوتي المفضلة أحصل عليها من
- 
- بمتجر القهوة المفضل لديك وقم باللازم Caribouاستبدل محمد باسمك و
-    
--->
+<!DOCTYPE html>
+<html>
+<head>
+  
+</head>
+<body>
+    <h1>مرحبا,أنا حيدر</h1>
+    <h3>قهوتي المفضلة احصل عليها من ستاربكس</h3>
+</body>
+</html>
